Fix overflow image

--- a/app/_component/card/index.css
+++ b/app/_component/card/index.css
@@ -9,15 +9,16 @@
 .common-card-setting {
   backface-visibility: hidden;
   transition: all 0.7s;
+  @apply h-[34rem] rounded-lg;
 }
 
 .card-with-back {
-  @apply w-80 h-[34rem] relative common-card-setting;
+  @apply w-80 relative common-card-setting;
   perspective: 100rem;
 }
 
 .card-front {
-  @apply w-full h-[34rem] absolute rounded-lg overflow-hidden bg-white common-card-setting;
+  @apply w-full absolute  bg-white common-card-setting overflow-hidden;
 }
 .card-with-back:hover .card-front {
   transform: rotateY(-180deg);
@@ -25,7 +26,7 @@
 
 .card-back {
   transform: rotateY(-180deg);
-  @apply w-full h-[34rem] absolute rounded-lg overflow-hidden common-card-setting;
+  @apply w-full absolute common-card-setting;
 }
 .card-with-back:hover .card-back {
   transform: rotateY(0);
